Prevent vis.js from adding 4px to the canvas every second on Firefox.

--- a/nxanimate/gui/client-resources/style.css
+++ b/nxanimate/gui/client-resources/style.css
@@ -58,7 +58,7 @@ html, body {
  * Graph editor
  **************************************************/
 
-#graph-editor {
+#graph-editor, #graph-editor-container {
     /* Where the graph is displayed. */
     height: 100%;
     width: 100%;
